# MECH-M-DUAL-1-SWD

./: .gitignore  .nojekyll  _quarto.yml  dark-style.css  index.html  index.qmd  intro.html  intro.qmd  pyproject.toml  references.bib  references.html  robots.txt  search.json  sitemap.xml  summary.html  summary.qmd
.github/workflow/: publish.yaml
_assets/errorhandling/module/: pyproject.toml
_assets/errorhandling/module/.github/workflows/: testing.yml
_assets/errorhandling/module/src/rectangle/: __init__.py  rectangle.py
_assets/errorhandling/module/tests/: __init__.py
_assets/errorhandling/module/tests/rectangle/: __init__.py
basics/: epilog.html  epilog.qmd  epilogue.html  epilogue.qmd  index.html  index.qmd  packagemanager.html  packagemanager.qmd  python.html  python.qmd  versioncontrol.html  versioncontrol.qmd
containerization/: docker.html  docker.qmd  index.html  index.qmd
errorhandling/: cicd.html  cicd.qmd  exception.html  exception.qmd  index.html  index.qmd  logging.html  logging.qmd  paths.html  paths.qmd  testing.html  testing.qmd
oop/: basics.qmd  index.html  index.qmd  uml.qmd
pp/: fp.html  fp.qmd  index.html  index.qmd  modules.html  modules.qmd  oop.html  oop.qmd
rs/: cicd.html  exception.html  exception.qmd  index.html  logging.html  logging.qmd  paths.html  paths.qmd  testing.html  testing.qmd
sc/: index.html  index.qmd  numpy.html  numpy.qmd  pandas.html  pandas.qmd
sss/: basics.html  basics.qmd  index.html  index.qmd  pp.html  pp.qmd  rs.html  rs.qmd  sc.html  sc.qmd  sss1.html  sss1.qmd  sss2.html  sss2.qmd
(+13 files in other folders)
