[project]
name = "rectangle"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Peter Kandolf", email = "peter.kandolf@mci.edu"},
]
dependencies = [
    "pytest>=8.3.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
